--- a/exercises.html
+++ b/exercises.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Esercizio rpsls</h3>
-    <div id="rpsls"></div>
     <script src="rpsls.js"></script>
+    <script src="countPositivesSumNegatives.js"></script>
 </body>
 </html>
