--- a/exercises.html
+++ b/exercises.html
@@ -8,5 +8,6 @@
 <body>
     <script src="rpsls.js"></script>
     <script src="countPositivesSumNegatives.js"></script>
+    <script src="pokerColor.js"></script>
 </body>
 </html>
