--- a/exercises.html
+++ b/exercises.html
@@ -8,6 +8,7 @@
 <body>
     <script src="rpsls.js"></script>
     <script src="countPositivesSumNegatives.js"></script>
-    <script src="pokerColor.js"></script>
+    <script src="isFlush.js"></script>
+    <script src="countSmileys.js"></script>
 </body>
 </html>
